# enso-archive

./: .gitignore  .jvmopts  .scalafmt.conf  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  build.sbt  test.enso
.cargo/: config
.github/: CODEOWNERS  settings.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yaml  docs.yml  rust.yml  scala.yml
FileManager/src/main/scala/org/enso/: FileManager.scala
ParserService/src/main/scala/org/enso/: ParserService.scala
Pkg/src/main/resources/: Main.enso
backend/: Cargo.toml
backend/parser/: Cargo.toml
backend/parser/src/: api.rs  jsclient.rs  lib.rs  main.rs  websocket.rs  wsclient.rs
common/project-manager/src/main/resources/: application.conf  logback.xml
common/rust/ast/core/: Cargo.toml
common/rust/ast/core/src/: internal.rs  lib.rs  main.rs  repr.rs
common/rust/ast/core/tests/: usage.rs
common/rust/ast/macros/: Cargo.toml
common/rust/ast/macros/src/: lib.rs  repr.rs  reprspan.rs
common/rust/file-manager/: Cargo.toml  README.md
common/rust/file-manager-client/: Cargo.toml
common/rust/file-manager-client/src/: lib.rs  main.rs  web_main.rs  web_transport.rs
common/rust/file-manager/src/: lib.rs
common/rust/ide/: Cargo.toml
common/rust/ide/src/: lib.rs  web_main.rs  web_transport.rs
common/rust/json-rpc/: Cargo.toml
common/rust/json-rpc/src/: api.rs  error.rs  handler.rs  lib.rs  main.rs  messages.rs  transport.rs
common/rust/json-rpc/src/test_util/: mod.rs
common/rust/json-rpc/src/test_util/transport/: mod.rs
common/rust/json-rpc/src/transport/: mock.rs
common/rust/json-rpc/tests/: test.rs
common/rust/macro-utils/: Cargo.toml
common/rust/macro-utils/src/: lib.rs
common/rust/parser/: Cargo.toml  README.md  build.rs  index.html
common/rust/parser/src/: api.rs  jsclient.rs  jswrapper.rs  lib.rs  main.rs  wsclient.rs
common/rust/parser/tests/: parsing.rs  web.rs
common/rust/shapely/core/: Cargo.toml
common/rust/shapely/core/src/: lib.rs
common/rust/shapely/core/tests/: derivation.rs
common/rust/shapely/macros/: Cargo.toml
common/rust/shapely/macros/src/: derive_iterator.rs  lib.rs
common/rust/utils/src/: lib.rs
doc/: haskell-style-guide.md  java-style-guide.md  rust-style-guide.md  scala-style-guide.md
doc/design/: enso-philosophy.md  notes-on-enso-syntax-and-semantics.md  syntax_and_semantic_discussion.md  syntax_and_semantic_discussion.rb
doc/design/engine/: backend-plan.md  caching-and-evaluation.md  engine-services.md  function-call-flow.md  vis-scratchpad.md
doc/design/runtime/: unbounded-recursion.md
doc/design/semantics/: semantics.md
doc/design/syntax/: syntax.md
doc/design/types/: types-old.md  types.md
doc/distribution/design/: packaging.md
doc/distribution/implementation/: distribution.md
doc/distribution/specification/: distribution.md  packaging.md
doc/engine/specification/: engine-services.md
doc/language-server/specification/: enso-protocol.md
doc/packaging/specification/: packaging.md
doc/performance/comparative-benchmark/: README.md
doc/performance/comparative-benchmark/benchmarks/cpp/: Makefile
doc/performance/comparative-benchmark/benchmarks/haskell/: package.yaml
doc/runtime/implementation/: function-call-flow.md
doc/runtime/implementation/polyglot/: java.md
doc/runtime/specification/: caching.md  demand-analysis.md
doc/semantics/specification/: semantics.md
doc/semantics/specification/polyglot/: java.md
doc/syntax/design/: syntax.md
doc/syntax/specification/: polyglot.md  syntax.md
doc/types/design/: polyglot.md  types.md
docs/: CONTRIBUTING.md  README.md  SECURITY.md  enso-philosophy.md  getting-enso.md
docs/debugger/: protocol.md
docs/distribution/: README.md  distribution.md  packaging.md
docs/infrastructure/: README.md  java-11.md  java11.md
docs/language-server/: README.md  enso-protocol-architecture.md  enso-protocol-messages.md  protocol-architecture.md  protocol-common.md  protocol-language-server.md  protocol-project-manager.md
docs/polyglot/: README.md  java.md  polyglot-bindings.md
docs/repl/: README.md  protocol.md
docs/runtime/: README.md  caching.md  execution-server-flow.md  function-call-flow.md  instruments.md  runtime-features.md  searcher.md
docs/semantics/: README.md  bindings.md  diagnostics.md  dispatch.md  errors.md  evaluation.md  modules.md  scoping.md
docs/style-guide/: README.md
docs/syntax/: README.md  assignment.md  comments.md  encoding.md  function-arguments.md  functions.md  layout.md  literals.md  macros.md  naming.md  projections.md  top-level.md  types.md
docs/types/: README.md  access-modifiers.md  contexts.md  dependent-typing.md  dynamic-dispatch.md  errors.md  evaluation.md  function-types.md  goals.md  hierarchy.md  inference-and-checking.md  modules.md  parallelism.md  pattern-matching.md  references.md  type-directed-programming.md  types.md
engine/: README.md
engine/gateway/src/main/resources/: application.conf
engine/language-server/src/main/resources/: application.conf
engine/language-server/src/main/schema/: binary_protocol.fbs  envelope.fbs  execution-context.fbs  file_manager.fbs  protocol.fbs  session.fbs  util.fbs
engine/language-server/src/test/resources/: application.conf
engine/polyglot-api/src/test/scala/: Main.scala
engine/runner/src/main/schema/: binary_protocol.fbs
interpreter/src/bench/scala/: EnsoBench.scala
lib/project-manager/src/main/resources/: application.conf  logback.xml
lib/project-manager/src/test/resources/: application.conf
lib/unused/: README.md
project/: AnnotationProcessor.scala  BuildInfo.scala  FixInstrumentsGeneration.scala  GenFbs.scala  GenerateFlatbuffers.scala  RunDebugCommand.scala  plugins.sbt
project-manager/src/main/resources/: application.conf
syntax/parser/: index.html  style.css
(+1473 files in other folders)
