[workspace]

members = [
    "common/rust/ast/core",
    "common/rust/file-manager-client",
    "common/rust/json-rpc",
    "common/rust/ast/macros",
    "common/rust/macro-utils",
    "common/rust/parser",
    "common/rust/prelude",
    "common/rust/shapely/core",
    "common/rust/shapely/macros",
    "common/rust/utils",
]