[package]
name = "parser"
version = "0.1.0"
authors = ["mwu <mwu-tow@gazeta.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"