[package]
name = "parser"
version = "0.1.0"
authors = ["mwu <mwu-tow@gazeta.pl>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
websocket = "0.23.0"
