[package]
name = "macro-utils"
version = "0.1.0"
authors = ["Wojciech Danilo <wojciech.danilo@luna-lang.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude        = { version = "0.1.0"  , path = "../prelude" }
proc-macro2    = "1.0"
quote          = "1.0"

[dependencies.syn]
version = "1.0"
features = [
  'extra-traits',
  'full' # for syn::File and syn::ItemFn
]
