[package]
name    = "ast-macros"
version = "0.1.0"
authors = ["Wojciech Danilo <wojciech.danilo@luna-lang.org>"]
edition = "2018"

[lib]
proc-macro = true

[features]
default = []

[dependencies]
proc-macro2    = "1.0"
quote          = "1.0"
Inflector      = "0.11.4"

macro-utils    = { version = "0.1.0"  , path = "../../macro-utils" }
prelude        = { version = "0.1.0"  , path = "../../prelude" }

[dependencies.syn]
version = "1.0"
features = [
  'extra-traits',
  'full' # for syn::File and syn::ItemFn
]
