[package]
name    = "shapely-macros"
version = "0.1.0"
authors = ["Wojciech Danilo <wojciech.danilo@luna-lang.org>"]
edition = "2018"

[lib]
proc-macro = true

[features]
default = []

[dependencies]
Inflector      = "0.11.4"
prelude        = { version = "0.1.0"  , path = "../../prelude" }
proc-macro2    = "1.0"
quote          = "1.0"

[dependencies.syn]
version = "1.0"
features = [
  'extra-traits',
  'full' # for syn::File and syn::ItemFn
]
